@@ -1,3 +1,8 @@
+2004-09-02  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* statusbar.tcl: better -bg handling (configure too), and tighten
+	up spacing on resize control to place it flush bottom right
+
 2004-09-01  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* statusbar.tcl: add -showseparator optional horizontal separator.
